include/lv00/proof.h

/* ============== 前向声明 ============== */
typedef struct Proposition Proposition;
typedef struct ProofNavigator ProofNavigator;
/* ============== 命题模式 ============== */
struct Proposition {
    int id;               /* 命题ID */
    PropositionType type; /* 命题类型 */
    ProofColor color;     /* 证明状态颜色 */
    char *label;          /* 命题标签（可空） */

    /* 输入/输出端口 */
    int *input_port_ids;  /* 输入端口ID数组 */
    int input_count;      /* 输入端口数量 */
    int *output_port_ids; /* 输出端口ID数组 */
    int output_count;     /* 输出端口数量 */

    /* 几何模式（虚线框内的约束骨架） */
    ConstraintGraph *pattern; /* 命题模式图 */

    /* 前置条件区域 */
    int *precondition_region_ids; /* 前置条件区域ID */
    int precondition_count;       /* 前置条件数量 */

    /* 后置条件 */
    int *postcondition_constraint_ids; /* 后置条件约束ID */
    int postcondition_count;           /* 后置条件数量 */

    /* 子命题（用于复合命题） */
    Proposition **sub_props; /* 子命题数组 */
    int sub_prop_count;      /* 子命题数量 */

    /* 类型信息 */
    TypeRegion *prop_type; /* 命题类型 */

    /* 元数据 */
    char *name;        /* 命题名称 */
    char *description; /* 描述 */
};
/* ============== 证明导航器 ============== */
struct ProofNavigator {
    ProofStep **steps; /* 证明步骤数组 */
    int step_count;    /* 步骤数量 */
    int current_step;  /* 当前步骤索引 */

    Proposition *target_prop;      /* 目标命题 */
    ConstraintGraph *construction; /* 构造图 */

    ProofDependency *dep_tree; /* 依赖树 */

    /* 导航状态 */
    bool is_complete;       /* 证明是否完成 */
    ProofColor final_color; /* 最终颜色 */

    /* 断点管理 */
    int *breakpoint_indices; /* 断点索引数组 */
    int breakpoint_count;    /* 断点数量 */

    /* 命题等价表 */
    PropositionEquivalence *equivalences; /* 等价命题数组 */
    int equivalence_count;                /* 等价命题数量 */
    int equivalence_capacity;             /* 等价命题容量 */

    /* ⊥ 的定义 */
    BottomDefinition *bottom_def; /* 矛盾定义（动态分配） */

    /* 引理视图状态 */
    int *lemma_view_step_ids;          /* 引理步骤ID数组 */
    LemmaViewState *lemma_view_states; /* 引理视图状态数组 */
    int lemma_view_count;              /* 引理视图状态数量 */
    int lemma_view_capacity;           /* 引理视图状态容量 */

    /* 引擎上下文（用于访问已加载的公理包等） */
    LV00Engine *engine;

    /* 证明策略注释（LeanGeo风格：先展示总体策略，再展开细节） */
    char *strategy_note; /* 总体策略描述 */
};
/**
 * 合一检查（详细版）
 * @param construction 构造图
 * @param proposition 命题模式
 * @param out_mismatch_info 输出不匹配信息
 * @return 合一结果
 */
UnifyStatus proof_unify_detailed(const ConstraintGraph *construction, Proposition *proposition, char **out_mismatch_info);
/* ============== 导出功能 ============== */

/**
 * 导出证明为HTML（含交互式导航、SVG时间线、自然语言描述）
 */
bool proof_export_html(ProofNavigator *nav, const char *filepath);
/**
 * 导出证明为LaTeX
 */
bool proof_export_latex(ProofNavigator *nav, const char *filepath);