include/lv00/constraint_graph.h

typedef enum {
    ADD_NODE_OK,            /* 添加成功 */
    ADD_NODE_CONFLICT,      /* 添加冲突 */
    ADD_NODE_INVALID_REGION /* 无效区域 */
} AddNodeResult;
typedef enum { ADD_CONSTRAINT_OK, ADD_CONSTRAINT_DUPLICATE, ADD_CONSTRAINT_CONFLICT } AddConstraintResult;
typedef enum { REMOVE_NODE_OK, REMOVE_NODE_NOT_FOUND, REMOVE_NODE_ERROR } RemoveNodeResult;