module/python/lv/_ctypes_binding.py


_lib.proof_export_html.argtypes = [POINTER(_ProofNavigator), c_char_p]
_lib.proof_export_html.restype = c_bool

_lib.proof_export_latex.argtypes = [POINTER(_ProofNavigator), c_char_p]
_lib.proof_export_latex.restype = c_bool

# ============================================================
# Recursion 函数签名
# ============================================================
# 递归终止检查相关函数。
# 测度系统（MeasureSystem）管理递归终止条件，
# 递归上下文（RecursionContext）跟踪递归调用状态并检测循环依赖。

_lib.measure_system_create.argtypes = []
_lib.measure_system_create.restype = POINTER(_MeasureSystem)

_lib.measure_system_destroy.argtypes = [POINTER(_MeasureSystem)]
_lib.measure_system_destroy.restype = None

_lib.measure_create_symbolic.argtypes = [c_char_p, c_int, c_int]
_lib.measure_create_symbolic.restype = c_void_p

_lib.measure_destroy.argtypes = [c_void_p]
_lib.measure_destroy.restype = None

_lib.measure_system_add.argtypes = [POINTER(_MeasureSystem), c_void_p]
_lib.measure_system_add.restype = c_bool

_lib.measure_system_set_default.argtypes = [POINTER(_MeasureSystem), c_void_p]
_lib.measure_system_set_default.restype = None

_lib.measure_compute_value.argtypes = [c_void_p, POINTER(_GeomNode), POINTER(_ConstraintGraph)]
_lib.measure_compute_value.restype = POINTER(_SymbolicCoord)

_lib.measure_compute_value_symbolic.argtypes = [c_void_p, POINTER(_GeomNode), POINTER(_ConstraintGraph)]
_lib.measure_compute_value_symbolic.restype = POINTER(_SymbolicCoord)

_lib.measure_compare.argtypes = [c_void_p, POINTER(_SymbolicCoord), POINTER(_SymbolicCoord)]
_lib.measure_compare.restype = c_int

_lib.recursion_context_create.argtypes = [c_int]
_lib.recursion_context_create.restype = POINTER(_RecursionContext)

_lib.recursion_context_destroy.argtypes = [POINTER(_RecursionContext)]
_lib.recursion_context_destroy.restype = None

_lib.recursion_context_enter.argtypes = [POINTER(_RecursionContext), c_int, POINTER(_GeomNode), POINTER(_ConstraintGraph)]
_lib.recursion_context_enter.restype = c_int

_lib.recursion_context_exit.argtypes = [POINTER(_RecursionContext)]
_lib.recursion_context_exit.restype = None

_lib.recursion_context_get_depth.argtypes = [POINTER(_RecursionContext)]
_lib.recursion_context_get_depth.restype = c_int

_lib.recursion_context_reset.argtypes = [POINTER(_RecursionContext)]
_lib.recursion_context_reset.restype = None

_lib.recursion_check_mutual.argtypes = [POINTER(c_int), c_int, POINTER(_MeasureSystem)]
_lib.recursion_check_mutual.restype = c_bool

# 运行递归模块内置测试套件（recursion.h:715）
_lib.recursion_run_builtin_tests.argtypes = [POINTER(_MeasureSystem), POINTER(POINTER(_RecursionTestResult)), POINTER(c_int)]
_lib.recursion_run_builtin_tests.restype = c_int

# ============================================================
# Engine 函数签名
# ============================================================
# 以下函数用于创建和操作 Lv-00 主引擎。
# 引擎是系统的顶层协调器，管理约束图、模块加载、
# 函数打包/实例化、求解和重写等核心功能。

# 创建新的引擎实例
_lib.engine_create.argtypes = []
_lib.engine_create.restype = POINTER(_lvEngine)

# 销毁引擎实例，释放所有关联资源
_lib.engine_destroy.argtypes = [POINTER(_lvEngine)]
_lib.engine_destroy.restype = None

# 执行求解：重写 -> 求解 -> 冲突检查
_lib.engine_solve.argtypes = [POINTER(_lvEngine)]
_lib.engine_solve.restype = c_int

# 执行重写-求解协作流程，max_rewrite_steps 和 max_solve_steps 控制步数上限
_lib.engine_rewrite_and_solve.argtypes = [POINTER(_lvEngine), c_int, c_int]
_lib.engine_rewrite_and_solve.restype = c_int

# 设置重写步数上限（单次重写的最大步数）
_lib.engine_set_rewrite_step_limit.argtypes = [POINTER(_lvEngine), c_int]
_lib.engine_set_rewrite_step_limit.restype = None

# 获取当前重写步数上限
_lib.engine_get_rewrite_step_limit.argtypes = [POINTER(_lvEngine)]
_lib.engine_get_rewrite_step_limit.restype = c_int

# 加载模块文件（.lv 格式），将模块内容加载到引擎的约束图中
_lib.engine_load_module.argtypes = [POINTER(_lvEngine), c_char_p]
_lib.engine_load_module.restype = c_int

# 加载公理包文件，添加公理到引擎的规则库中
_lib.engine_load_axiom_package.argtypes = [POINTER(_lvEngine), c_char_p]
_lib.engine_load_axiom_package.restype = c_int

# 打包函数块：将内部节点和端口封装为可重用的函数模板
_lib.engine_pack_function.argtypes = [
    POINTER(_lvEngine),
    POINTER(c_int), c_int,
    POINTER(c_int), c_int,
    POINTER(c_int), c_int,
    POINTER(c_int)
]
_lib.engine_pack_function.restype = c_bool

# 实例化函数块：使用实参替换形式参数创建函数实例
_lib.engine_instantiate_function.argtypes = [
    POINTER(_lvEngine), c_int,
    POINTER(c_int), c_int,
    POINTER(c_int)
]
_lib.engine_instantiate_function.restype = POINTER(c_int)

# 执行合一检查：检查构造图是否满足命题模式
_lib.engine_unify.argtypes = [POINTER(_lvEngine), POINTER(_ConstraintGraph), POINTER(_ConstraintGraph)]
_lib.engine_unify.restype = c_int

# 处理位电路跳闸事件（默认恢复策略）
_lib.engine_handle_circuit_trip.argtypes = [POINTER(_lvEngine)]
_lib.engine_handle_circuit_trip.restype = c_int

# 使用指定动作处理位电路跳闸
_lib.engine_handle_circuit_trip_with_action.argtypes = [POINTER(_lvEngine), c_int]
_lib.engine_handle_circuit_trip_with_action.restype = c_int

# 创建冻结点快照，保存当前引擎状态用于后续回滚
_lib.engine_create_frozen_point.argtypes = [POINTER(_lvEngine)]
_lib.engine_create_frozen_point.restype = c_void_p

# 恢复到冻结点状态，丢弃快照之后的所有修改
_lib.engine_restore_frozen_point.argtypes = [POINTER(_lvEngine), c_void_p]
_lib.engine_restore_frozen_point.restype = c_bool

# 销毁冻结点快照，释放占用的内存
_lib.engine_destroy_frozen_point.argtypes = [c_void_p]
_lib.engine_destroy_frozen_point.restype = None

# 获取引擎最后一次操作的状态码
_lib.engine_get_last_status.argtypes = [POINTER(_lvEngine)]
_lib.engine_get_last_status.restype = c_int

# 获取引擎最后一次操作的错误消息
_lib.engine_get_last_error.argtypes = [POINTER(_lvEngine)]
_lib.engine_get_last_error.restype = c_char_p

# 添加重写规则到引擎
_lib.engine_add_rewrite_rule.argtypes = [POINTER(_lvEngine), c_void_p]
_lib.engine_add_rewrite_rule.restype = c_bool

# 获取引擎的流式上下文
_lib.engine_get_stream_context.argtypes = [POINTER(_lvEngine)]
_lib.engine_get_stream_context.restype = c_void_p

# 设置流式输出开关
_lib.engine_set_streaming_enabled.argtypes = [POINTER(_lvEngine), c_bool]
_lib.engine_set_streaming_enabled.restype = None

# 查询流式输出是否启用
_lib.engine_is_streaming_enabled.argtypes = [POINTER(_lvEngine)]
_lib.engine_is_streaming_enabled.restype = c_bool

# 发射引擎流式事件
_lib.engine_emit_stream_event.argtypes = [POINTER(_lvEngine), c_int, c_char_p, c_int, c_int, c_int]
_lib.engine_emit_stream_event.restype = None

# ============================================================
# Debug 函数签名
# ============================================================
# 调试和诊断相关函数，包括日志控制、性能计数器和内存池管理。
# 用于开发调试和性能分析。

_lib.debug_log_init.argtypes = []
_lib.debug_log_init.restype = c_int

_lib.debug_log_shutdown.argtypes = []
_lib.debug_log_shutdown.restype = None

_lib.debug_set_log_level.argtypes = [c_int]
_lib.debug_set_log_level.restype = None

_lib.debug_get_log_level.argtypes = []
_lib.debug_get_log_level.restype = c_int

_lib.debug_set_mode.argtypes = [c_bool]
_lib.debug_set_mode.restype = None

_lib.debug_is_debug_mode.argtypes = []
_lib.debug_is_debug_mode.restype = c_bool

_lib.debug_reset_counters.argtypes = []
_lib.debug_reset_counters.restype = None

_lib.debug_get_counters.argtypes = [c_void_p]
_lib.debug_get_counters.restype = None

_lib.debug_counters_report.argtypes = []
_lib.debug_counters_report.restype = c_void_p

_lib.mem_pool_create.argtypes = [ctypes.c_size_t, c_int]
_lib.mem_pool_create.restype = c_void_p

_lib.mem_pool_destroy.argtypes = [c_void_p]
_lib.mem_pool_destroy.restype = None

# ============================================================
# Unify 函数签名
# ============================================================
# 合一（Unification）相关函数，用于检查约束图是否满足命题模式。
# 注意：部分旧接口已移除，请使用 proof_unify_detailed 等新接口。

# [已移除] unify_check, unify_detailed: C 库中不存在这些导出函数，请使用 unify_construction_with_proposition 系列

# ============================================================
# Rewrite 函数签名
# ============================================================
# 重写（Rewrite）规则相关函数，用于几何图的等价变换。
# 注意：大部分旧接口已移除，重写功能现通过引擎接口提供。

# [已移除] rewrite_create_rule, rewrite_add_rule, rewrite_rewrite, rewrite_rewrite_until: C 库中不存在这些导出函数

# [重命名] rewrite_destroy_rule -> rewrite_rule_destroy
_lib.rewrite_rule_destroy.argtypes = [c_void_p]
_lib.rewrite_rule_destroy.restype = None

# [已移除] rewrite_add_rule: C 库中不存在此导出函数，请使用 engine_add_rewrite_rule 代替

# [已移除] rewrite_rewrite: C 库中不存在此导出函数，实际导出为 rewrite_with_rules

# [已移除] rewrite_rewrite_until: C 库中不存在此导出函数

# ============================================================
# Solver 函数签名
# ============================================================
# 代数求解器相关函数，包括方程组求解、自由度计算和冲突检测。

_lib.solve_algebraic_system.argtypes = [POINTER(_ConstraintGraph), POINTER(c_int), c_int, POINTER(POINTER(_SymbolicCoord))]
_lib.solve_algebraic_system.restype = c_int

_lib.count_degrees_of_freedom.argtypes = [POINTER(_ConstraintGraph), POINTER(POINTER(c_int))]
_lib.count_degrees_of_freedom.restype = c_int

_lib.check_conflict_equations.argtypes = [POINTER(_ConstraintGraph)]
_lib.check_conflict_equations.restype = c_bool

_lib.eliminate_geometry.argtypes = [POINTER(_ConstraintGraph), c_int, POINTER(c_int), c_int]
_lib.eliminate_geometry.restype = c_int

# ============================================================
# 辅助函数
# ============================================================

# lv_free_ptr: FFI 兼容释放函数，接受 void*（与 lv_free(void**) 不同）
# lv_free 接受 void**（双重指针），ctypes 无法方便传递双重指针
# 因此 C 层新增了 lv_free_ptr(void*) 专供 FFI 使用
_lib.lv_free_ptr = _lib.lv_free_ptr if hasattr(_lib, 'lv_free_ptr') else _lib.free
_lib.lv_free_ptr.argtypes = [c_void_p]
_lib.lv_free_ptr.restype = None

_lib.lv_init.argtypes = []
_lib.lv_init.restype = c_bool

_lib.lv_cleanup.argtypes = []
_lib.lv_cleanup.restype = None

# [已移除] lv_get_version: 该函数在 C 头文件中为 static inline，不在 DLL 导出中

_lib.lv_get_last_error_code.argtypes = []
_lib.lv_get_last_error_code.restype = c_int

_lib.lv_get_last_error_message.argtypes = []
_lib.lv_get_last_error_message.restype = c_char_p

_lib.lv_set_error.argtypes = [c_int, c_char_p]
_lib.lv_set_error.restype = None

_lib.lv_clear_error.argtypes = []
_lib.lv_clear_error.restype = None

# ============================================================
# Formula 函数签名
# ============================================================
# 公式解析和渲染相关函数，支持将几何公式字符串解析为 AST，
# 并将 AST 渲染为可视化输出或转换为约束图。

_lib.formula_parse.argtypes = [c_char_p, c_char_p]
_lib.formula_parse.restype = c_void_p

_lib.formula_render.argtypes = [c_void_p, c_int]
_lib.formula_render.restype = c_void_p

# [已移除] formula_validate, formula_free_error_list: C 库中不存在这些导出函数

# [重命名] formula_get_last_error -> formula_parser_get_last_error
_lib.formula_parser_get_last_error.argtypes = []
_lib.formula_parser_get_last_error.restype = c_char_p

# [已移除] parse_result_get_ast, parse_result_destroy: C 库中不存在这些导出函数

_lib.formula_to_graph.argtypes = [c_void_p, c_void_p]
_lib.formula_to_graph.restype = c_void_p

# [已移除] formula_to_graph_result_*: C 库中不存在这些导出函数，FormulaToGraphResult 结构体通过 formula_to_graph 返回指针后直接访问字段

_lib.formula_to_graph_result_destroy.argtypes = [c_void_p]
_lib.formula_to_graph_result_destroy.restype = None

_lib.graph_to_formula.argtypes = [c_void_p]
_lib.graph_to_formula.restype = c_void_p

_lib.graph_to_formula_result_destroy.argtypes = [c_void_p]
_lib.graph_to_formula_result_destroy.restype = None

# 注册 formula_node_destroy，供 formula.py 的 __del__ 调用
_lib.formula_node_destroy.argtypes = [c_void_p]
_lib.formula_node_destroy.restype = None

# ============================================================
# 常量定义
# ============================================================
# 以下常量映射 Lv-00 C 库中定义的结果码、枚举值和状态标志。
# 所有常量值与 C 头文件中的定义保持一致。

# ===== 节点添加结果码 =====
# graph_add_* 函数的返回值，表示添加操作的结果
ADD_NODE_OK = 0              # 添加成功
ADD_NODE_CONFLICT = 1        # 添加导致约束冲突
ADD_NODE_INVALID_REGION = 2  # 添加的区域定义无效（如非闭合边界）

# ===== 约束添加结果码 =====
# graph_add_*_constraint 函数的返回值
ADD_CONSTRAINT_OK = 0        # 约束添加成功
ADD_CONSTRAINT_DUPLICATE = 1 # 约束已存在（重复添加）
ADD_CONSTRAINT_CONFLICT = 2  # 约束与现有约束冲突

# ===== 节点移除结果码 =====
REMOVE_NODE_OK = 0           # 节点移除成功
REMOVE_NODE_NOT_FOUND = 1    # 未找到指定 ID 的节点
REMOVE_NODE_ERROR = 2        # 移除过程发生错误
